Set imagePullPolicy to Always for nginx-demo

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: nginx-demo
         image: rajkumar160116/nginx-demo:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
